# travel_etl

./: .gitignore  README.md  init_database.py  main.py  pyproject.toml
tests/: test_table.py
tests/queries1/: query1.sql  query2.sql
travel_etl/: database.py  utils.py
travel_etl/core/: table.py  utils.py
travel_etl/det/offers/: __init__.py  loader.py  prepare.sql
travel_etl/det/offers_first_time/: __init__.py  init.sql  loader.py  prepare.sql  query.sql
travel_etl/det/pivot/: __init__.py  ddl.sql  loader.py  query.sql
travel_etl/det/price_change/: __init__.py  loader.py  query.sql
travel_etl/det/teztour/: __init__.py  ddl.sql  loader.py  query.sql
travel_etl/det/travelata/: __init__.py  ddl.sql  loader.py  query.sql
travel_etl/prod/offers/: __init__.py  ddl.sql  loader.py  prepare.sql  query.sql
travel_etl/prod/options/: __init__.py  countries.sql  dates.sql  loader.py  num_nights.sql
travel_etl/stat/global_stat/: __init__.py  loader.py  query.sql
travel_etl/workflows/: main.py
workflows/: config.yaml  main.py
